...
            icon: Icons.logout_outlined,
            text: 'Logout'.tr,
            hideArrowIcon: true,
          ),
          // test button, you can delete it
          // ElevatedButton(
          //     key: Key('testButton'),
          //     onPressed: () {
          //       controller.test();
          //     },
          //     child: Text('test'))
        ],
      ),
...
