const Map<String, String> fr = {
  'App Name': 'Medecino',
  'Welcome Back,': 'Content de te revoir,',
  'Hi ': 'Salut ',
  'Category': 'Médecin spécialiste',
  'Top Rated Teacher': 'Médecin le mieux noté',
  'Search Teacher': 'Rechercher un médecin',
  'View All': 'Voir tout',
  'error ': 'Erreur ',
...
